[gd_scene load_steps=30 format=2]

[ext_resource path="res://src/scenes/challenges_menu/ChallengeMenu1.gd" type="Script" id=1]
[ext_resource path="res://src/objects/challengemenu1/Platform.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/challenges_menu/challenge1/chicken (6).png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/BarlowCondensed-SemiBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/BarlowCondensed-BlackItalic.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/challenges_menu/challenge1/parallax-mountain-mountains.png" type="Texture" id=6]
[ext_resource path="res://assets/challenges_menu/challenge1/sky.png" type="Texture" id=7]
[ext_resource path="res://assets/challenges_menu/challenge1/chicken (7).png" type="Texture" id=8]
[ext_resource path="res://assets/challenges_menu/challenge1/chicken (5).png" type="Texture" id=9]
[ext_resource path="res://assets/challenges_menu/challenge1/chicken (4).png" type="Texture" id=10]
[ext_resource path="res://assets/challenges_menu/challenge1/chicken (1).png" type="Texture" id=11]
[ext_resource path="res://assets/challenges_menu/challenge1/chicken (2).png" type="Texture" id=12]
[ext_resource path="res://assets/challenges_menu/challenge1/chicken (3).png" type="Texture" id=13]
[ext_resource path="res://assets/challenges_menu/challenge1/chicken (8).png" type="Texture" id=14]
[ext_resource path="res://assets/fonts/BubbleRainbow-VGdn0.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets/ui/TitleBanner.png" type="Texture" id=16]
[ext_resource path="res://src/ui/GameOverMenu.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/ui/UiTextButtonLabel.tres" type="DynamicFont" id=18]
[ext_resource path="res://assets/ui/statsmenubg2.png" type="Texture" id=19]
[ext_resource path="res://src/objects/HealthBarUI.tscn" type="PackedScene" id=20]
[ext_resource path="res://assets/challenges_menu/score_icon.png" type="Texture" id=21]

[sub_resource type="Shader" id=15]
code = "shader_type canvas_item;
uniform float scroll_speed = 0.05;
void fragment(){
	vec2 shifteduv = UV;
	shifteduv.x += TIME * scroll_speed;
	vec4 col = texture(TEXTURE, shifteduv);
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 15 )
shader_param/scroll_speed = 0.05

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 36, 36.5 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=14]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=16]
size = 30
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 45
outline_color = Color( 0.243137, 0.27451, 0.313726, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]
size = 24
outline_size = 3
outline_color = Color( 0.188235, 0.219608, 0.262745, 1 )
font_data = ExtResource( 15 )

[node name="ChallengeMenu1" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]
position = Vector2( 0, 48 )

[node name="Sky" type="Sprite" parent="Background"]
position = Vector2( 628, 452 )
scale = Vector2( 4.075, 4.16667 )
texture = ExtResource( 7 )

[node name="ParallaxMountain" type="Node2D" parent="Background"]
scale = Vector2( 3, 3 )

[node name="BG" type="TextureRect" parent="Background/ParallaxMountain"]
material = SubResource( 2 )
margin_top = 64.0
margin_right = 427.0
margin_bottom = 224.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 2

[node name="TestButton" type="Button" parent="."]
visible = false
margin_left = 1183.0
margin_top = 19.0
margin_right = 1266.0
margin_bottom = 39.0
text = "Main Menu"

[node name="Platform2" parent="." instance=ExtResource( 2 )]
position = Vector2( 640, 728 )

[node name="Platform3" parent="." instance=ExtResource( 2 )]
position = Vector2( 1048, 728 )

[node name="Platform1" parent="." instance=ExtResource( 2 )]
position = Vector2( 240, 728 )

[node name="Player" type="Area2D" parent="."]
position = Vector2( 640, 622 )

[node name="Collision" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, -30 )
shape = SubResource( 13 )

[node name="Anim" type="AnimatedSprite" parent="Player"]
position = Vector2( 0, -30 )
scale = Vector2( 2, 2 )
frames = SubResource( 3 )
frame = 5
playing = true

[node name="LivesLabel" type="Label" parent="."]
visible = false
margin_left = 35.0
margin_top = 18.0
margin_right = 156.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 14 )
text = "Lives: "

[node name="FallingSpeedTimer" type="Timer" parent="."]

[node name="SpawnSpeedTimer" type="Timer" parent="."]

[node name="GameOverMenu" parent="." instance=ExtResource( 17 )]

[node name="GameUI" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="ScoreLabel" type="Label" parent="GameUI"]
margin_left = 1160.0
margin_top = 32.0
margin_right = 1257.0
margin_bottom = 68.0
custom_fonts/font = SubResource( 16 )
text = "0"
valign = 1

[node name="ScoreIcon" type="Sprite" parent="GameUI"]
position = Vector2( 1125, 52 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 21 )

[node name="PauseMenu" type="Node2D" parent="GameUI"]
visible = false

[node name="Background" type="ColorRect" parent="GameUI/PauseMenu"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.6 )

[node name="TitleBanner" type="Sprite" parent="GameUI/PauseMenu"]
position = Vector2( 640, 134 )
scale = Vector2( 5, 5 )
texture = ExtResource( 16 )

[node name="Statsmenubg" type="Sprite" parent="GameUI/PauseMenu"]
position = Vector2( 640, 376 )
scale = Vector2( 6.66667, 6.66667 )
texture = ExtResource( 19 )

[node name="TitleLabel" type="Label" parent="GameUI/PauseMenu"]
margin_top = 102.0
margin_right = 1278.0
margin_bottom = 156.0
custom_colors/font_color = Color( 0.243137, 0.27451, 0.313726, 1 )
custom_fonts/font = SubResource( 11 )
text = "PAUSED"
align = 1
valign = 1

[node name="PauseResumeBtn" type="TextureButton" parent="GameUI/PauseMenu"]
margin_left = 880.0
margin_top = 552.0
margin_right = 952.0
margin_bottom = 585.0

[node name="Label" type="Label" parent="GameUI/PauseMenu/PauseResumeBtn"]
margin_right = 71.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 18 )
text = "RESUME"
align = 1
valign = 1

[node name="MainMenuBtn" type="TextureButton" parent="GameUI/PauseMenu"]
margin_left = 328.0
margin_top = 552.0
margin_right = 432.0
margin_bottom = 585.0

[node name="Label" type="Label" parent="GameUI/PauseMenu/MainMenuBtn"]
margin_right = 71.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 18 )
text = "MAIN MENU"
align = 1
valign = 1

[node name="BGMLabel" type="Label" parent="GameUI/PauseMenu"]
margin_left = 368.0
margin_top = 256.0
margin_right = 565.0
margin_bottom = 296.0
custom_fonts/font = SubResource( 12 )
text = "BACKGROUND MUSIC:"
align = 2
valign = 1

[node name="BGMSlide" type="HSlider" parent="GameUI/PauseMenu"]
margin_left = 712.0
margin_top = 264.0
margin_right = 885.0
margin_bottom = 280.0
rect_scale = Vector2( 1.25, 1.25 )
ticks_on_borders = true

[node name="SFXLabel" type="Label" parent="GameUI/PauseMenu"]
margin_left = 376.75
margin_top = 312.0
margin_right = 563.75
margin_bottom = 352.0
custom_fonts/font = SubResource( 12 )
text = "SOUND EFFECTS:"
align = 2
valign = 1

[node name="SFXSlide" type="HSlider" parent="GameUI/PauseMenu"]
margin_left = 712.0
margin_top = 320.0
margin_right = 885.0
margin_bottom = 336.0
rect_scale = Vector2( 1.25, 1.25 )
ticks_on_borders = true

[node name="HealthBar" parent="GameUI" instance=ExtResource( 20 )]
position = Vector2( 24, 24 )

[connection signal="pressed" from="TestButton" to="." method="_on_TestButton_pressed"]
[connection signal="body_entered" from="Player" to="." method="_on_Player_body_entered"]
[connection signal="timeout" from="FallingSpeedTimer" to="." method="_on_FallingSpeedTimer_timeout"]
[connection signal="timeout" from="SpawnSpeedTimer" to="." method="_on_SpawnSpeedTimer_timeout"]
[connection signal="pressed" from="GameUI/PauseMenu/PauseResumeBtn" to="." method="_on_PauseResumeBtn_pressed"]
[connection signal="pressed" from="GameUI/PauseMenu/MainMenuBtn" to="." method="_on_MainMenuBtn_pressed"]
